--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test/tinytest"]
-	path = test/tinytest
+[submodule "tests/tinytest"]
+	path = tests/tinytest
 	url = https://github.com/anaximeno/tinytest.git
